# private-assistant-time-skill-py

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Containerfile  Dockerfile  README.md  pyproject.toml  renovate.json  template.yaml
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: container-build-pr.yml  container-build-push.yml  docker-build-action.yml  python_code_quality.yml
src/private_assistant_time_skill/: __init__.py  config.py  main.py  time_skill.py  tools_time_units.py
src/private_assistant_time_skill/models/: __init__.py  active_alarm.py  active_timer.py
src/private_assistant_time_skill/templates/: alarm_set.j2  current_time.j2  delete_last.j2  help.j2  list.j2  list_timers.j2  set.j2  timer_set.j2  timer_triggered.j2  triggered.j2
tests/: test_actions.py  test_extract_time_units.py  test_templates.py  test_time_skill.py
