[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "private-assistant-time-skill"
version = "0.2.0"
description = "Time Management Skill for the Private Assistant: Handles timers, time telling, and other time-related functionalities."
authors = ["stkr22 <stkr22@github.com>"]
readme = "README.md"
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
typer = {extras = ["all"], version = "^0.12.3"}
pydantic = "^2.8.2"
pyyaml = "^6.0.1"
jinja2 = "^3.1.3"
private-assistant-commons = "^1.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.11.2"
pytest = "^8.3.3"

[tool.poetry.scripts]
private-assistant-time-skill = "private_assistant_time_skill.main:app"

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]
ignore = ["E203"]
